--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ torchvision = "^0.15.1"
 pytorch-lightning = "^2.0.0"
 tensorboardX = "^2.6"
 GitPython = "^3.1.31"
+pandas = "^2.3.2"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^3.2.0"
